<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etBits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/bits"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConverterPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_para"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBits" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConverterPara">

        <RadioButton
            android:id="@+id/rbBytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bytes" />

        <RadioButton
            android:id="@+id/rbKB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kb" />

        <RadioButton
            android:id="@+id/rbMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mb" />

        <RadioButton
            android:id="@+id/rbGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gb" />

        <RadioButton
            android:id="@+id/rbTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tb" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConverter" />

</androidx.constraintlayout.widget.ConstraintLayout>
